# podiumdb-mysql

./: .editorconfig  .env.example  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: verification.yml
docs/: data-dictionary.md  query-catalog.md
sql/: bootstrap.sql
sql/analytics/: 001_views.sql  queries.sql
sql/routines/: 001_routines_and_triggers.sql
sql/schema/: 001_core_schema.sql
sql/seed/: 001_synthetic_competition.sql
sql/tests/: invariants.sql
src/podiumdb/: __init__.py  __main__.py  cli.py  config.py  connection.py  repository.py
tests/: test_cli.py  test_config.py  test_connection.py  test_repository.py  test_sql_contracts.py
